# io-adapters

./: Cargo.toml  Readme.md  rust-toolchain.toml
src/: lib.rs
src/read/: _read.rs  abs_seek_pos.rs  into_clone_ral.rs  read_at_cursor.rs  read_at_ref.rs  read_range.rs  seekless.rs
