# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "maulingmonkey-io-adapters"
publish                                 = false
version                                 = "0.0.0-git"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
repository                              = "https://github.com/MaulingMonkey/io-adapters"
# documentation                           = "https://docs.rs/maulingmonkey-io-adapters/"
edition                                 = "2018"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "maulingmonkey-io-adapters: types and traits to adapt I/O types"
keywords                                = ["read_write_at", "io"]
categories                              = ["filesystem"]
exclude = [
    ".vscode/*",
    "build.rs",     # just use docs.rs
]

[dependencies]
read_write_at                           = "0.1.0"

[badges]
travis-ci = { repository = "MaulingMonkey/io-adapters", branch = "master" }

[package.metadata.docs.rs]
all-features = true
